src/main/java/com/example/pismobank/errors/TransactionLimitOverpass.java
package com.example.pismobank.errors;

public class TransactionLimitOverpass extends RuntimeException {
}
